--- a/K_Means.ipynb
+++ b/K_Means.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "img = cv2.cvtColor(cv2.imread('test.jpg'), cv2.COLOR_BGR2RGB)\n",
+    "img = cv2.cvtColor(cv2.imread('test_img.jpg'), cv2.COLOR_BGR2RGB)\n",
     "img = cv2.resize(img, (img_width, img_height))\n",
     "\n",
     "plt.imshow(img)\n",
